--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
           </div>
         </div>
       </div>
-      <span class="footer__copy">&#169; All Rights Reserved By Bedimcode </span>
+      <span class="footer__copy">&#169; All Rights Reserved By AslWebX </span>
     </footer>
 
     <!--========== SCROLL UP ==========-->
